@@ -17,7 +17,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: s_bsd.c,v 1.117 1999/08/12 03:02:20 lusky Exp $
+ *  $Id: s_bsd.c,v 1.118 1999/09/04 20:21:14 lusky Exp $
  */
 #include "s_bsd.h"
 #include "class.h"
@@ -632,6 +632,7 @@ int connect_server(struct ConfItem* aconf,
 void close_connection(struct Client *cptr)
 {
   struct ConfItem *aconf;
+  assert(0 != cptr);
 
   if (IsServer(cptr))
     {
@@ -698,34 +699,34 @@ void close_connection(struct Client *cptr)
     --cptr->dns_reply->ref_count;
     cptr->dns_reply = 0;
   }
-  if (cptr->fd >= 0)
-    {
-      flush_connections(cptr);
-      local[cptr->fd] = NULL;
+  if (-1 < cptr->fd) {
+    flush_connections(cptr);
+    local[cptr->fd] = NULL;
+    fdlist_delete(cptr->fd, FDL_ALL);
+    close(cptr->fd);
+    cptr->fd = -1;
+  }
+
 #ifdef ZIP_LINKS
-        /*
-         * the connection might have zip data (even if
-         * FLAGS2_ZIP is not set)
-         */
-      if (IsServer(cptr))
-        zip_free(cptr);
+    /*
+     * the connection might have zip data (even if
+     * FLAGS2_ZIP is not set)
+     */
+  if (IsServer(cptr))
+    zip_free(cptr);
 #endif
-      fdlist_delete(cptr->fd, FDL_ALL);
-      close(cptr->fd);
-      cptr->fd = -1;
-      DBufClear(&cptr->sendQ);
-      DBufClear(&cptr->recvQ);
-      memset(cptr->passwd, 0, sizeof(cptr->passwd));
-      /*
-       * clean up extra sockets from P-lines which have been discarded.
-       */
-      if (cptr->listener) {
-        assert(0 < cptr->listener->ref_count);
-        if (0 == --cptr->listener->ref_count && !cptr->listener->active) 
-          close_listener(cptr->listener);
-        cptr->listener = 0;
-      }
-    }
+  DBufClear(&cptr->sendQ);
+  DBufClear(&cptr->recvQ);
+  memset(cptr->passwd, 0, sizeof(cptr->passwd));
+  /*
+   * clean up extra sockets from P-lines which have been discarded.
+   */
+  if (cptr->listener) {
+    assert(0 < cptr->listener->ref_count);
+    if (0 == --cptr->listener->ref_count && !cptr->listener->active) 
+      close_listener(cptr->listener);
+    cptr->listener = 0;
+  }
 
   for (; highest_fd > 0; --highest_fd) {
     if (local[highest_fd])
