@@ -17,7 +17,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: send.c,v 1.79 1999/09/04 20:21:15 lusky Exp $
+ *   $Id: send.c,v 1.80 1999/09/04 21:46:26 lusky Exp $
  */
 #include "send.h"
 #include "channel.h"
@@ -142,6 +142,9 @@ send_message(aClient *to, char *msg, int len)
                 sendto_realops("Trying to send to myself! [%s]", msg);
                 return 0;
         }
+
+        if (to->fd < 0)
+                return 0; /* Thou shalt not write to closed descriptors */
 
         if (IsDead(to))
                 return 0; /* This socket has already been marked as dead */
